--- a/src/BusinessLogic/Resources/templates/edit-shipping-service.html
+++ b/src/BusinessLogic/Resources/templates/edit-shipping-service.html
@@ -61,10 +61,7 @@
                     {$shippingServices.taxClassTitle}
                 </div>
                 <div class="pl-form-group">
-                    <select class="pl-with-label"
-                            name="tax"
-                            id="pl-tax-class-select"
-                            data-required="true">
+                    <select name="tax" id="pl-tax-class-select" data-required="true">
                     </select>
                     <i class="material-icons">expand_more</i>
                     <label for="pl-tax-class-select" class="pl-text-input-label">
