--- a/src/BusinessLogic/Resources/templates/onboarding-welcome.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-welcome.html
@@ -1,13 +1,13 @@
-<div class="pl-onboarding-welcome-page pl-flex-expand pl-medium-page pl-page-onboarding">
+<div class="pl-onboarding-welcome-page pl-flex-expand pl-small-page pl-page-onboarding">
     <div class="pl-text-center pl-page-padding">
         <h1>
             {$onboardingWelcome.header}
         </h1>
-        <p>
+        <p class="pl-separate-vertically">
             {$onboardingWelcome.steps}
         </p>
         <div class="pl-onboarding-list">
-            <div class="pl-onboarding-welcome-steps pl-separate-vertically">
+            <div class="pl-onboarding-welcome-steps">
                 <div class="pl-list-item">
                     1. {$onboardingWelcome.stepOne}
                 </div>
