--- a/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
+++ b/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
@@ -6,10 +6,7 @@
                 {$shippingServices.rangeTypeExplanation}
             </div>
             <div class="pl-form-group">
-                <select class="pl-with-label"
-                        name="range_type"
-                        id="pl-range-type-select"
-                        data-required="true">
+                <select name="range_type" id="pl-range-type-select" data-required="true">
                     <option value="0">{$shippingServices.priceRange}</option>
                     <option value="1">{$shippingServices.weightRange}</option>
                     <option value="2">{$shippingServices.weightAndPriceRange}</option>
@@ -55,10 +52,7 @@
                 {$shippingServices.pricePolicyExplanation}
             </div>
             <div class="pl-form-group">
-                <select class="pl-with-label"
-                        name="pricing_policy"
-                        id="pl-pricing-policy-select"
-                        data-required="true">
+                <select name="pricing_policy" id="pl-pricing-policy-select" data-required="true">
                     <option value="0">{$shippingServices.packlinkPrice}</option>
                     <option value="1">{$shippingServices.percentagePacklinkPrices}</option>
                     <option value="2">{$shippingServices.fixedPrices}</option>
