--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -159,6 +159,7 @@
     display: flex;
     flex-direction: row;
     margin-top: 15px;
+
     .pl-form-group + .pl-form-group {
       margin-top: 0;
       margin-left: -1px;
@@ -167,11 +168,14 @@
 
   .pl-button-group {
     flex-direction: row;
+
     button {
       border-radius: 0;
+
       &:first-child {
         border-radius: 4px 0 0 4px;
       }
+
       &:last-child {
         border-radius: 0 4px 4px 0;
       }
@@ -185,7 +189,7 @@
     align-items: start;
 
     &:not(:first-child) {
-      margin-top: 15px;
+      margin-top: 12px;
     }
 
     label {
@@ -197,24 +201,30 @@
       font-size: 12px;
     }
 
-    input {
-      background-color: $color-white;
+    input, select {
+      height: 56px;
+      background: $color-white;
       border-radius: 0;
       border: 1px solid $border-color;
-      padding: 21px 16px 13px;
       color: $input-control-color;
+      line-height: 22px;
+      font-size: 14px;
       width: 100%;
       margin: 0;
       box-shadow: unset;
-      line-height: 22px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      padding: 21px 15px 13px;
+      max-width: none;
+
+      &.compact {
+        padding-top: 13px;
+      }
 
       &:focus {
         border: 1px solid $color-blue;
         outline: none;
-      }
-
-      &.compact {
-        padding: 13px 16px;
       }
 
       &::placeholder, &::-webkit-input-placeholder {
@@ -223,42 +233,17 @@
     }
 
     select {
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-      border: 1px solid $border-color;
-      line-height: 22px;
-      background: $color-white;
-      color: $input-control-color;
-      font-size: 14px;
-      width: 100%;
-      padding: 14px 11px 13px;
-
-      &:focus {
-        border: 1px solid $color-blue;
-        outline: none;
-      }
-
-      &.pl-with-label {
-        padding-top: 21px;
-      }
+      -moz-padding-start: 11px;
     }
 
     i {
       position: absolute;
       right: 10px;
-      top: 14px;
+      top: 50%;
+      margin-top: calc(-1 * #{$icon-button-size} / 2);
       color: $border-color;
       width: $icon-button-size;
       height: $icon-button-size;
-    }
-
-    .pl-with-label {
-      max-width: none;
-
-      & ~ i {
-        top: 18px;
-      }
     }
 
     select + i {
@@ -291,12 +276,12 @@
   }
 
   input[type=checkbox] {
-    width: 20px;
-    min-width: 20px;
-    height: 20px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    width: 20px;
+    min-width: 20px;
+    height: 20px;
     border: 1px solid $border-color;
     position: relative;
 
@@ -311,15 +296,13 @@
     &:checked {
       background-color: $color-blue;
       border-color: $color-blue;
+      text-align: center;
 
       &:before {
         color: $color-white;
         content: '\2713';
-        position: absolute;
-        top: 4px;
-        left: 4px;
-        font-size: 20px;
-        font-weight: bold;
+        margin: 0;
+        font: bold 20px/24px pl-proxima-nova;
       }
     }
   }
