--- a/src/BusinessLogic/Resources/templates/default-warehouse.html
+++ b/src/BusinessLogic/Resources/templates/default-warehouse.html
@@ -35,7 +35,7 @@
                     <label for="pl-default-warehouse-company">{$defaultWarehouse.company}</label>
                 </div>
                 <div class="pl-form-group">
-                    <select id="pl-default-warehouse-country" name="country" data-required="true" class="pl-with-label">
+                    <select id="pl-default-warehouse-country" name="country" data-required="true">
                     </select>
                     <i class="material-icons">expand_more</i>
                     <label for="pl-default-warehouse-country">{$defaultWarehouse.country}</label>
@@ -43,7 +43,6 @@
                 <div class="pl-form-group">
                     <input type="text" id="pl-default-warehouse-postal_code" name="postal_code"
                            placeholder="{$defaultWarehouse.postal_code-placeholder}"
-                           class="pl-with-label"
                            data-required="true"
                            autocomplete="no"/>
                     <label for="pl-default-warehouse-postal_code">{$defaultWarehouse.postal_code}</label>
