--- a/src/BusinessLogic/Resources/templates/order-status-mapping.html
+++ b/src/BusinessLogic/Resources/templates/order-status-mapping.html
@@ -35,7 +35,7 @@
             <i class="material-icons pl-separation-indicator">chevron_right</i>
         </div>
         <div class="pl-half-width pl-form-group">
-            <select class="pl-all-caps"></select>
+            <select class="pl-all-caps compact"></select>
             <i class="material-icons">expand_more</i>
         </div>
     </div>
