--- a/src/BusinessLogic/Resources/templates/order-status-mapping.html
+++ b/src/BusinessLogic/Resources/templates/order-status-mapping.html
@@ -6,7 +6,7 @@
         <h1>{$orderStatusMapping.title}</h1>
     </header>
     <div class="pl-page-content pl-page-padding">
-        <div class="pl-medium-page">
+        <form class="pl-medium-page">
             <p class="pl-page-info pl-bottom-separate">
                 {$orderStatusMapping.description}
             </p>
@@ -20,7 +20,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
     </div>
     <div class="pl-page-buttons pl-flex-left">
         <button id="pl-page-submit-btn" class="pl-button pl-button-primary">
