--- a/src/BusinessLogic/Resources/templates/register-modal.html
+++ b/src/BusinessLogic/Resources/templates/register-modal.html
@@ -3,7 +3,7 @@
            name="countryFilter" autocomplete="no">
     <i class="material-icons">search</i>
 </div>
-<div class="pl-register-country-list-wrapper pl-page-content pl-no-margin">
+<div class="pl-register-country-list-wrapper pl-page-content">
     <template id="country-template">
         <div data-code="$code" class="pl-country">
             <img src="logo_url" class="pl-country-logo" alt="country_name">
