--- a/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
+++ b/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
@@ -1,4 +1,4 @@
-<div class="pl-center pl-full-width">
+<div class="pl-center pl-full-width pl-flex-expand pl-no-shrinkg">
     <form id="pl-pricing-policy-form">
         <section>
             <div class="pl-section-title pl-text-left" id="pl-pricing-policy-title"></div>
@@ -65,7 +65,7 @@
             <div class="pl-form-group" id="pl-price-percentage-wrapper">
                 <div>{$shippingServices.increaseExplanation}</div>
                 <div>{$shippingServices.reduceExplanation}</div>
-                <div class="pl-form-group-wrapper">
+                <div class="pl-form-group-wrapper pl-full-width">
                     <div class="pl-button-group pl-half-width">
                         <button id="pl-price-percentage-increase" class="pl-button pl-button-primary pl-no-margin">
                             {$shippingServices.increase}
