--- a/src/BusinessLogic/Resources/scss/variables.scss
+++ b/src/BusinessLogic/Resources/scss/variables.scss
@@ -19,3 +19,4 @@ $color-little-transparent: rgba(216, 216, 216, 0.8);
 $color-semi-transparent: rgba(255, 255, 255, 0.5);
 
 $icon-button-size: 24px;
+$input-height: 56px;
