--- a/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
+++ b/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
@@ -67,10 +67,12 @@
                 <div>{$shippingServices.reduceExplanation}</div>
                 <div class="pl-form-group-wrapper pl-full-width">
                     <div class="pl-button-group pl-half-width">
-                        <button id="pl-price-percentage-increase" class="pl-button pl-button-primary pl-no-margin">
+                        <button id="pl-price-percentage-increase"
+                                class="pl-button pl-button-primary pl-no-margin pl-half-width">
                             {$shippingServices.increase}
                         </button>
-                        <button id="pl-price-percentage-decrease" class="pl-button pl-button-secondary pl-no-margin">
+                        <button id="pl-price-percentage-decrease"
+                                class="pl-button pl-button-secondary pl-no-margin pl-half-width">
                             {$shippingServices.reduce}
                         </button>
                     </div>
