--- a/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
+++ b/src/BusinessLogic/Resources/templates/pricing-policy-modal.html
@@ -1,4 +1,4 @@
-<div class="pl-center pl-full-width pl-flex-expand pl-no-shrinkg">
+<div class="pl-center pl-full-width pl-flex-expand pl-no-shrink">
     <form id="pl-pricing-policy-form">
         <section>
             <div class="pl-section-title pl-text-left" id="pl-pricing-policy-title"></div>
