--- a/src/BusinessLogic/Resources/templates/register.html
+++ b/src/BusinessLogic/Resources/templates/register.html
@@ -1,5 +1,5 @@
 <div class="pl-register-page pl-flex-expand">
-    <div class="pl-flex-expand pl-page-padding pl-medium-page">
+    <div class="pl-flex-expand pl-page-padding pl-medium-page pl-no-shrink">
         <div class="pl-bottom-separate">
             <h1 class="pl-text-center">
                 {$register.startEnjoying}
