--- a/src/BusinessLogic/Resources/css/app.css
+++ b/src/BusinessLogic/Resources/css/app.css
@@ -439,12 +439,10 @@
   align-items: start;
   flex-shrink: 0;
 }
-
 #pl-page .pl-form-group.pl-half-width, #pl-page .pl-form-group .pl-half-width {
   width: 50%;
   min-width: 50%;
 }
-
 #pl-page .pl-form-group:not(:first-child) {
   margin-top: 12px;
 }
@@ -703,6 +701,7 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  flex-shrink: 0;
 }
 #pl-page .pl-modal-mask .pl-modal .pl-modal-footer .pl-button {
   margin-top: 0;
@@ -818,15 +817,12 @@
   padding: 5px 15px;
   min-width: auto;
 }
-
 #pl-page .pl-shipping-services-list-item .pl-service-buttons .pl-button:not(.pl-hidden) + .pl-button {
   margin-left: 10px;
 }
-
 #pl-page .pl-button-group {
   padding-right: 10px;
 }
-
 #pl-page .pl-button-group button {
   height: 56px;
   min-width: 110px;
