Fix icons on the settings page
ISSUE: PLCR18-44

--- a/src/BusinessLogic/Resources/scss/utility.scss
+++ b/src/BusinessLogic/Resources/scss/utility.scss
@@ -146,6 +146,16 @@
     height: 22px;
   }
 
+  #pl-navigate-warehouse svg {
+    width: 22px;
+    height: 22px;
+  }
+
+  #pl-navigate-parcel svg {
+    width: 23px;
+    height: 22px;
+  }
+
   .pl-flex-start {
     align-items: flex-start;
   }
