Replace links generation logic with new CountryService usage
PLCR24-18

--- a/src/BusinessLogic/Resources/templates/configuration.html
+++ b/src/BusinessLogic/Resources/templates/configuration.html
@@ -49,7 +49,7 @@
     <div class="pl-footer">
         <div class="pl-row-orientation">
             <span>{$configuration.contactUs}</span>
-            &nbsp;<a href="mailto::business@packlink.com" rel="nofollow" target="_blank">business@packlink.com</a>
+            &nbsp;<a href="{$configuration.contactUrlMail}" rel="nofollow" target="_blank">{$configuration.contactUrl}</a>
         </div>
         <div class="pl-row-orientation">
             <span id="pl-version-number"></span>
