Implement misconfiguration detection and message
ISSUE: PLCS26-17

--- a/src/BusinessLogic/Resources/templates/shipping-services-list.html
+++ b/src/BusinessLogic/Resources/templates/shipping-services-list.html
@@ -8,6 +8,11 @@
             <div class="pl-text-left pl-service-name">
                 <div id="pl-service-name"></div>
                 <div id="pl-service-policy"></div>
+                <div class="pl-error">
+                    <div class="pl-error-message" data-pl-element="error" id="pl-misconfiguration-error">
+                        {$shippingServices.misconfiguration}
+                    </div>
+                </div>
             </div>
         </div>
         <div class="pl-wrap-items">
