--- a/src/BusinessLogic/Resources/templates/shipping-services-table.html
+++ b/src/BusinessLogic/Resources/templates/shipping-services-table.html
@@ -34,6 +34,11 @@
         <td class="pl-text-left">
             <div id="pl-service-name"></div>
             <div id="pl-service-policy"></div>
+            <div class="pl-error">
+                <div class="pl-error-message" data-pl-element="error" id="pl-misconfiguration-error">
+                    {$shippingServices.misconfiguration}
+                </div>
+            </div>
         </td>
         <td class="pl-text-left" id="pl-service-delivery-description">
         </td>
