Update UI to show correct currency symbol in the misconfiguration fixed price field
ISSUE: PLCS26-20

--- a/src/BusinessLogic/Resources/templates/edit-shipping-service.html
+++ b/src/BusinessLogic/Resources/templates/edit-shipping-service.html
@@ -62,7 +62,7 @@
                             <div class="pl-form-group pl-half-width">
                                 <input type="text" id="pl-misconfiguration-fixed-price" name="misconfigurationFixedPrice" placeholder="5" data-type="number" data-validation-rule="nonNegative" data-pl-contains-errors="1">
                                 <label for="pl-misconfiguration-fixed-price">
-                                    {$shippingServices.fixedPrices} (€)
+                                    {$shippingServices.fixedPrices}
                                 </label>
                             </div>
                         </div>
