Fix label for out of range behavior when misconfiguration is detected
ISSUE: PLCS26-74

--- a/src/BusinessLogic/Resources/templates/edit-shipping-service.html
+++ b/src/BusinessLogic/Resources/templates/edit-shipping-service.html
@@ -89,6 +89,8 @@
                 <div class="pl-checkbox pl-hidden" id="pl-use-packlink-price-wrapper">
                     <input type="checkbox" name="usePacklinkPriceIfNotInRange" id="pl-use-packlink-price-if-not-in-range">
                     <label for="pl-use-packlink-price-if-not-in-range">{$shippingServices.usePacklinkRange}</label>
+                    <span class="pl-hidden" id="pl-use-packlink-range">{$shippingServices.usePacklinkRange}</span>
+                    <span class="pl-hidden" id="pl-use-fixed-price">{$shippingServices.useFixedPrice}</span>
                 </div>
             </section>
             <section id="pl-tax-class-section" class="pl-hidden">
